# node-opencv

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  binding.gyp  build.rs  index.d.ts  index.js  main.d.ts  main.js  package-lock.json  package.json  rustfmt.toml  test-install.js  test.js
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  linux.yml  mac.yml  release.yml  windows.yml
demo/: demo.cpp  test-new-api.js  test.js  test_flip.js  worker.js
scripts/: bundle-libs.sh
src/: async.h  common.h  constants.rs  core_funcs.rs  dnn.rs  drawing.rs  error.rs  features.rs  image.rs  image_io.cc  image_io.h  imgproc.rs  lib.rs  main.cc  main.cpp  mat.cc  mat.h  mat.rs  matrix.cpp  matrix.h  thread_pool.h  types.rs  utility.cc  utility.h  utils.rs  video.rs  worker.h
tests/: abort.test.js  dnn.test.js  dnn2.test.js  drawing.test.js  enum_variants.test.js  features.test.js  features2.test.js  features3.test.js  image.test.js  mat.test.js  mat2.test.js  mat3.test.js  net.test.js  optional_params.test.js  pipeline.test.js  video.test.js
tests/fixtures/: identity.onnx
