[package]
edition = "2021"
name = "node-opencv-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["async","napi4"] }
napi-derive = "2.12.2"
tokio = { version = "1.42.0", features = ["full"] }
opencv =  "0.93.5"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
